Bug 66313 - Artifacts with FF in image gallery on friendseek.com [SNA]
Summary: Artifacts with FF in image gallery on friendseek.com [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-28 10:08 UTC by Clemens Eisserer
Modified: 2013-09-30 11:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
self-contained testcase (320.38 KB, application/octet-stream)
2013-09-30 08:06 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2013-06-28 10:08:25 UTC
When moving images in friendseek's image gallery using FF, I get corruptions with SNA.

Steps to reproduce:
- Login at friendseek.com (yeah .. sorry)
- Open a user's profile
- Open a user's gallery by clicking on his/her profile photo
- Move the picture by dragging it
-> Results on my SNB notebook in artifacts

As the description is probably confusing, I've created a screencast illustrating the issue: http://youtu.be/ccUf5DOSiow
Comment 1 Chris Wilson 2013-06-28 10:14:14 UTC
Hmm, an edge effect. Could be lots of things. Can you please check which of your machines are affected?
Comment 2 Clemens Eisserer 2013-06-28 10:16:36 UTC
The SNB machine currently is the only one I have access to, I can check on gen5 in ~4-5 days or so.
Comment 3 Chris Wilson 2013-07-02 11:42:56 UTC
Please give me a ping when you have 2.21.12 and 3.10 ;-)
Comment 4 Clemens Eisserer 2013-07-02 17:27:33 UTC
I am currently on bussines travel, will report back tomorrow.
The kernel-fix is in 3.10 final  (would be great^^)?
Comment 5 Chris Wilson 2013-07-02 17:31:28 UTC
The kernel patch will be in 3.10.1, alas.
Comment 6 Clemens Eisserer 2013-07-04 07:02:09 UTC
As current git 	ebf4517a0bb510e406795c169aa21b7cc615ed31 fails, I tried with 2.21.11 + patch. Unfortunately I can still reproduce it.
Comment 7 Chris Wilson 2013-09-29 09:40:27 UTC
Clemens, have you seen anything remotely like this elsewhere?
Comment 8 Clemens Eisserer 2013-09-29 10:02:13 UTC
I remember I've seen it on another webpage with FF.
Are you not able to reproduce it?
Comment 9 Chris Wilson 2013-09-29 10:10:30 UTC
Honestly, I haven't tried that hard since the known corruption requires login to friendseek.
Comment 10 Clemens Eisserer 2013-09-30 08:06:36 UTC
Created attachment 86828 [details]
self-contained testcase
Comment 11 Clemens Eisserer 2013-09-30 08:07:19 UTC
I've uploaded a self-contained testcase, simply open the test.html with firefox
Comment 12 Chris Wilson 2013-09-30 08:10:49 UTC
/me stares in disbelief.

Feature!
Comment 13 Chris Wilson 2013-09-30 08:13:34 UTC
chromium - shows a black border around the image, that scrolls smoothly
midori - shows a translucent grey border around the image, scrolls smoothly
firefox - fluctuates between a black border and translucent grey, and redraw errors whilst scrolling
Comment 14 Chris Wilson 2013-09-30 08:38:20 UTC
firefox + noaccel (now pnv): black border around image to edge of screen, translucent areas outside of original border when scrolled. (Smooth, no misrender)
Comment 15 Chris Wilson 2013-09-30 09:13:02 UTC
#define NO_FILL_BOXES 1

seems to be the magic value.
Comment 16 Chris Wilson 2013-09-30 09:13:32 UTC
(But of course, that could just be a migration knock-on effect...)
Comment 17 Chris Wilson 2013-09-30 11:13:43 UTC
Overdrawn fill_boxes. :|
Comment 18 Chris Wilson 2013-09-30 11:46:56 UTC
Thanks a lot for the test case!


commit b9bce2303e3e51d2a703154869bb36564aad7921
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Sep 30 12:39:51 2013 +0100

    sna: Do not reduce overdrawn rectangles for XRenderCompositeRects
    
    The specification is that each is drawn in sequence (so over top of
    earlier rectangles), so do not cheat by using the computed region.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66313
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.