sna: Do not reduce overdrawn rectangles for XRenderCompositeRects

The specification is that each is drawn in sequence (so over top of
earlier rectangles), so do not cheat by using the computed region.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=66313
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>